...

                  //**************** TITLE ********************** */
                  const Padding(padding: EdgeInsets.only(top: 20)),
                  Padding(
                    padding: const EdgeInsets.fromLTRB(15, 0, 15, 5),
                    child: TextFieldWidget(
                        label: "Title",
                        obscure: false,
                        min: 1,
                        controller: titleController,
                        initialVal: titleController.text.isEmpty
                            ? vm.advert.title
                            : titleController.text),
...
                                borderRadius: BorderRadius.circular(10),
                                border:
                                    Border.all(color: Colors.grey, width: 1)),
                            child: Padding(
                              padding: const EdgeInsets.all(20.0),
                              child: Text(
                                trade == null ? "Trade Type" : trade!,
                                style: const TextStyle(fontSize: 18),
                              ),
                            ),
                          ),
                        ),
                      )),
...
                  Padding(
                    padding: const EdgeInsets.fromLTRB(15, 20, 15, 5),
                    child: TextFieldWidget(
                      initialVal: descrController.text.isEmpty
                          ? vm.advert.description
                          : descrController.text,
                      label: "Description",
                      obscure: false,
                      min: 3,
                      controller: descrController,
                    ),
                  ),
                  //*************************************************//
...
                                ), //need to dispatch save job action?
                              ),
                        //********************************************//

                        //************DISCARD BUTTON*****************//
                        TransparentLongButtonWidget(
                          text: "Discard",
                          function: vm.popPage,
                        ),
                        const Padding(padding: EdgeInsets.only(bottom: 10)),
                      ],
                    ),
                  ),
...
